# quant-lab-rust

./: .gitignore  Cargo.toml  HANDOFF.md  README.md
.github/workflows/: ci.yml
book/: main.tex  references.bib  toc.md
book/chapters/: ch00.tex  ch01.tex  ch02.tex  ch03.tex  ch04.tex  ch05.tex  ch06.tex  ch07.tex
book/figures/: candlesticks.tex  confusion-matrix.tex  roc-curve.tex
book/kaobook/: kaobook.cls
crates/qf-01-fraud/: Cargo.toml  README.md
crates/qf-01-fraud/examples/: fraud_analysis.rs
crates/qf-01-fraud/src/: lib.rs
crates/qf-01-fraud/tests/: fraud_tests.rs
crates/qf-02-loan/: Cargo.toml  README.md
crates/qf-02-loan/examples/: loan_analysis.rs
crates/qf-02-loan/src/: data.rs  eval.rs  features.rs  lib.rs  scorer.rs  traits.rs
crates/qf-02-loan/tests/: loan_tests.rs
crates/qf-03-stocks/: Cargo.toml  README.md
crates/qf-03-stocks/examples/: stock_analysis.rs
crates/qf-03-stocks/src/: lib.rs
crates/qf-03-stocks/tests/: stock_tests.rs
crates/qf-04-returns/: Cargo.toml  README.md
crates/qf-04-returns/examples/: returns_analysis.rs
crates/qf-04-returns/src/: README.md  drawdown.rs  error.rs  lib.rs  returns.rs  risk.rs  volatility.rs
crates/qf-04-returns/tests/: returns_tests.rs
crates/qf-05-backtest/: Cargo.toml  README.md
crates/qf-05-backtest/examples/: backtest_demo.rs
crates/qf-05-backtest/src/: README.md  backtest.rs  error.rs  lib.rs  signal.rs  strategy.rs
crates/qf-05-backtest/tests/: backtest_tests.rs
crates/qf-common/: Cargo.toml  README.md
crates/qf-common/src/: lib.rs
crates/qf-common/tests/: common_tests.rs
crates/quant-core/: Cargo.toml  README.md
crates/quant-timeseries/: Cargo.toml  README.md
crates/quant-timeseries/examples/: ffd_demo.rs  stationarity.rs
crates/quant-timeseries/src/: README.md  acf.rs  adf.rs  error.rs  fracdiff.rs  lib.rs  ols.rs
crates/quant-timeseries/tests/: timeseries_tests.rs
data/: creditcard_sample.csv  stock_prices.csv
(+9 files in other folders)
