[workspace]
resolver = "2"
members = [
    "crates/qf-common",
    "crates/qf-01-fraud",
    "crates/qf-02-loan",
    "crates/qf-03-stocks",
    "crates/qf-04-returns",
    "crates/qf-05-backtest",
    "crates/quant-core",
    "crates/quant-timeseries",
    "crates/quant-vol",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Marcelo Correa <mvcorrea@gmail.com>"]
license = "MIT"
repository = "https://github.com/mvcorrea/quant-lab-rust"
